# Vera

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Vera roadMap.txt  build.sh  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  init-git.sh  push_to_github.bat  requirements-ai-agent.txt  requirements-automation.txt  requirements-dev.txt  requirements-model-downloader.txt  requirements.txt  run-tests.sh  setup.sh  vera-project-complete.txt
.github/workflows/: mcp_controller.yml  tests.yml
ai_agent/: __init__.py  api.py  config.py  models.py  tasks.py  worker.py
app/: config.py  main.py
automation/: automation_plan.json  automation_plan.md  basic_automation_plan.json  steps_config.json  test_plan.json
config/: redis-commander.json
docker-entrypoint-initdb.d/: init-db.sh
docs/: MCP_CONFIGURATION.md
frontend/: index.html  server.py
frontend/css/: main.css
frontend/js/: api.js  debug.js  file-upload.js  main.js  monitor.js  pages.js
models/: docker-compose.yml  update_models.py
models/autoscaling/: autoscaler.py
models/llm/: Dockerfile  generate_proto.sh  healthcheck.sh  model.py  model_pb2.py  model_pb2_grpc.py  requirements.txt  service.py  test.sh
models/llm/proto/: model.proto
models/monitoring/: prometheus.yml
models/monitoring/grafana/: dashboard.json
models/monitoring/rules/: model.rules.yml
models/tests/: test_edge_cases.py  test_models.py
scripts/: auto_recovery.py  auto_start.sh  automation_runner.py  basic_automation.py  debug_services.py  download_models.py  generate-redis-config.sh  generate_ssl.sh  install_deps.sh  install_system_deps.sh  log_analyzer.py  logs.sh  monitor.sh  power_control.sh  requirements-dev.txt  run-compose.sh  run_tests.py  sequential_setup.py  setup_automation.sh  setup_github_repo.py  start_vera.sh  stress_test.sh  test_runner.py  vera-power.service
services/vera-core/: README.md  pyproject.toml
services/vera-core/app/: main.py
services/vera-core/app/api/endpoints/: mcp.py  semantic.py
services/vera-core/app/cloud/: cloud_adapter.py
services/vera-core/app/config/: github_mcp.py
services/vera-core/app/core/: logging.py  self_healing.py
services/vera-core/app/mcp/: controller.py
services/vera-core/app/models/: semantic_operations.py  semantic_space.py
services/vera-core/app/visualization/: semantic_visualizer.py  semantic_viz.py
services/vera-core/examples/: semantic_space_demo.py
services/vera-core/tests/cloud/: base_test_adapter.py  test_cloud_adapter.py  test_postgres_adapter.py  test_redis_adapter.py
tests/: base_test.py  conftest.py  logging_config.py  test_example.py
tests/integration/: test_audit.py  test_auth.py  test_config.py  test_dlp.py
tests/system/: test_recovery.py
tests/unit/: test_main.py  test_redis.py
